Add UI delegates configure option
Change-Id: Ib9d6c8842609c4c410ca65a35fefeab481f71cb2
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -440,6 +440,10 @@
             "section": "WebEngine",
             "output": [ "privateFeature" ]
         },
+        "ui-delegates": {
+            "label": "UI Delegates",
+            "output": [ "privateFeature" ]
+        },
         "webrtc": {
             "label": "WebRTC",
             "purpose": "Provides WebRTC support.",
