Add testsupport to new configure system
Change-Id: I123ce22ea3a3d8b7b80c67fa322cb817d924f2e0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -444,6 +444,11 @@
             "label": "UI Delegates",
             "output": [ "privateFeature" ]
         },
+        "testsupport": {
+            "label": "Test Support",
+            "autoDetect": "config.private_tests || call.isTestsInBuildParts",
+            "output": [ "privateFeature" ]
+        },
         "webrtc": {
             "label": "WebRTC",
             "purpose": "Provides WebRTC support.",
