--- a/configure.json
+++ b/configure.json
@@ -11,7 +11,7 @@
             "webengine-icu": { "type": "enum", "name": "system-icu", "values": { "system": "yes", "qt": "no" } },
             "ffmpeg": { "type": "enum", "name": "system-ffmpeg", "values": { "system": "yes", "qt": "no" } },
             "opus": { "type": "enum", "name": "system-opus", "values": { "system": "yes", "qt": "no" } },
-            "webp": { "type": "enum", "name": "system-webp", "values": { "system": "yes", "qt": "no" } },
+            "webp": { "type": "enum", "name": "system-libwebp", "values": { "system": "yes", "qt": "no" } },
             "pepper-plugins": "boolean",
             "printing-and-pdf": "boolean",
             "proprietary-codecs": "boolean",
@@ -436,8 +436,9 @@
         "native-spellchecker": {
             "label": "Native Spellchecker",
             "purpose": "Provides a native spellchecker.",
-            "condition": "config.macos",
             "section": "WebEngine",
+            "autoDetect": false,
+            "condition": "config.macos && features.spellchecker",
             "output": [ "privateFeature" ]
         },
         "ui-delegates": {
@@ -461,7 +462,7 @@
             "condition": "config.unix && !config.darwin && libs.nss",
             "output": [ "privateFeature" ]
         },
-        "system-webp": {
+        "system-libwebp": {
             "label": "libwebp, libwebpmux and libwebpdemux",
             "autoDetect": "config.unix",
             "condition": "libs.webp",
@@ -476,7 +477,7 @@
         "system-ffmpeg": {
             "label": "ffmpeg",
             "autoDetect": false,
-            "condition": "libs.ffmpeg && features.system-opus && features.system-webp",
+            "condition": "libs.ffmpeg && features.system-opus && features.system-libwebp",
             "output": [ "privateFeature" ]
         },
         "system-icu": {
@@ -572,7 +573,7 @@
                    "entries": [
                         "system-re2",
                         "system-icu",
-                        "system-webp",
+                        "system-libwebp",
                         "system-opus",
                         "system-ffmpeg",
                         "system-libvpx",
