Use ozone for x11
Switch to use ozone also for x11/glx. This way we have a
more elegant approach to hook in our gl surface classes
and we use ozone for all linux qpa backends. Moreover,
we have now also more fine grain control to reimplement
gl surface handling logic.

This also aims to fix currently broken wayland backend,
but instead of patching the broken x11 calls, we simply reuse
ozone which does not use x11 for ozone egl.

Add webengine-x11 check to handle ozone glx plugin compilation.

For ozone egl backend reimplement missing functions.

Task-number: QTBUG-65682
Task-number: QTBUG-51631
Change-Id: I8b45c6f4d09a1c703efb12b6452d78ab385371ab
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -208,9 +208,14 @@
             "sources": [
                 { "type": "pkgConfig", "args": "freetype2 >= 2.4.2" }
             ]
+        },
+        "webengine-x11" : {
+            "label" : "x11",
+            "sources": [
+                { "type": "pkgConfig", "args": "x11" }
+            ]
         }
     },
-
     "tests" : {
         "webengine-alsa": {
             "label": "alsa",
@@ -604,6 +609,11 @@
             "condition": "config.unix && features.system-freetype && libs.webengine-freetype",
             "output": [ "privateFeature" ]
         },
+        "webengine-system-x11" : {
+            "label": "x11",
+            "condition": "config.unix && libs.webengine-x11",
+            "output": [ "privateFeature" ]
+        },
         "webengine-sanitizer" : {
             "label": "Sanitizer",
             "autoDetect": "config.sanitizer && tests.webengine-sanitizer",
@@ -732,7 +742,8 @@
                         "webengine-system-png",
                         "webengine-system-jpeg",
                         "webengine-system-harfbuzz",
-                        "webengine-system-freetype"
+                        "webengine-system-freetype",
+                        "webengine-system-x11"
                     ]
                 },
                 {
