Fix system-zlib configure name collision with core
When -zlib is provided on windows for main configure line
the system-zlib feature is forced on webengine. This
is not expected since we assume zlib only for unix builds.
Prepend 'webengine' for webengine system-zlib feature.

Task-number: QTBUG-63367
Change-Id: I983d2e0df0badbaf7a076662ce178009be151406
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -1,6 +1,7 @@
 {
     "module": "webengine",
     "depends": [
+        "core-private",
         "gui-private",
         "printsupport"
     ],
@@ -304,9 +305,9 @@
             "condition": "config.unix && libs.minizip",
             "output": [ "privateFeature" ]
         },
-        "system-zlib" : {
+        "webengine-system-zlib" : {
             "label": "zlib",
-            "condition": "config.unix && libs.zlib",
+            "condition": "config.unix && features.system-zlib && libs.zlib",
             "output": [ "privateFeature" ]
         },
         "system-libevent" : {
@@ -581,7 +582,7 @@
                         "system-snappy",
                         "system-libsrtp",
                         "system-glib",
-                        "system-zlib",
+                        "webengine-system-zlib",
                         "system-minizip",
                         "system-libevent",
                         "system-jsoncpp",
