--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -7,6 +7,7 @@ chromium_version = exec_script("//build/util/version.py", [ "-f", rebase_path("/
 
 include_dirs = [
   "//skia/config",
+  "//third_party",
   "//third_party/skia/include/core"
 ]
 
@@ -41,7 +42,7 @@ if (enable_widevine) {
 }
 
 if (enable_webrtc) {
-  deps += [ "//third_party/webrtc/base:base" ]
+  deps += [ "//third_party/webrtc_overrides" ]
 }
 
 if (is_linux && !is_desktop_linux) {
