--- a/src/core/qtwebengine_resources.gni
+++ b/src/core/qtwebengine_resources.gni
@@ -44,11 +44,11 @@ repack("qtwebengine_repack_resources_100") {
     "$root_gen_dir/components/components_resources_100_percent.pak",
     "$root_gen_dir/content/app/resources/content_resources_100_percent.pak",
     "$root_gen_dir/chrome/renderer_resources_100_percent.pak",
-    "$root_gen_dir/blink/public/resources/blink_image_resources_100_percent.pak",
+    "$root_gen_dir/blink/public/resources/blink_scaled_resources_100_percent.pak",
   ]
   output = "$root_out_dir/qtwebengine_resources_100p.pak"
   deps = [
-    "//third_party/WebKit/public:image_resources_grit",
+    "//third_party/WebKit/public:scaled_resources_100_percent",
     "//chrome/renderer:resources_grit",
     "//components/resources:components_scaled_resources_grit",
     "//content/app/resources:resources_grit",
@@ -62,11 +62,11 @@ repack("qtwebengine_repack_resources_200") {
     "$root_gen_dir/components/components_resources_200_percent.pak",
     "$root_gen_dir/content/app/resources/content_resources_200_percent.pak",
     "$root_gen_dir/chrome/renderer_resources_200_percent.pak",
-    "$root_gen_dir/blink/public/resources/blink_image_resources_200_percent.pak",
+    "$root_gen_dir/blink/public/resources/blink_scaled_resources_200_percent.pak",
   ]
   output = "$root_out_dir/qtwebengine_resources_200p.pak"
   deps = [
-    "//third_party/WebKit/public:image_resources_grit",
+    "//third_party/WebKit/public:scaled_resources_200_percent",
     "//chrome/renderer:resources_grit",
     "//components/resources:components_scaled_resources_grit",
     "//content/app/resources:resources_grit",
