Fix enabling testsupport API when private_tests config is set
Change-Id: Ia58fa1bcb1151c0db061df8cbc8f1bf6dc379805
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -449,7 +449,7 @@
         },
         "testsupport": {
             "label": "Test Support",
-            "autoDetect": "config.private_tests || call.isTestsInBuildParts",
+            "autoDetect": "features.private_tests || call.isTestsInBuildParts",
             "output": [ "privateFeature" ]
         },
         "webrtc": {
