Change spellchecker-related private features into public ones
This is done because qtConfig(spellchecker) is present
in an example .pro file, and thus "spellchecker" should be
a public feature.

Change-Id: Idff977b8d0835b049c4c19dc42c1475d2c55c323
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -433,7 +433,7 @@
             "label": "Spellchecker",
             "purpose": "Provides a spellchecker.",
             "section": "WebEngine",
-            "output": [ "privateFeature" ]
+            "output": [ "publicFeature" ]
         },
         "native-spellchecker": {
             "label": "Native Spellchecker",
@@ -441,7 +441,7 @@
             "section": "WebEngine",
             "autoDetect": false,
             "condition": "config.macos && features.spellchecker",
-            "output": [ "privateFeature" ]
+            "output": [ "publicFeature" ]
         },
         "ui-delegates": {
             "label": "UI Delegates",
