--- a/configure.json
+++ b/configure.json
@@ -388,7 +388,7 @@
         },
         "system-libxml2" : {
             "label": "libxml2",
-            "condition": "config.unix && tests.srtp",
+            "condition": "config.unix && tests.libxml2",
             "output": [ "privateFeature" ]
         },
         "winversion" : {
