Fix configure "native-spellchecker" feature description
Change-Id: I4d11005b23554ef9e6a860b31d8b3a9741348090
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -437,7 +437,7 @@
         },
         "native-spellchecker": {
             "label": "Native Spellchecker",
-            "purpose": "Provides a native spellchecker.",
+            "purpose": "Use the system's native spellchecking engine.",
             "section": "WebEngine",
             "autoDetect": false,
             "condition": "config.macos && features.spellchecker",
