--- a/configure.json
+++ b/configure.json
@@ -163,6 +163,12 @@
             "sources": [
                 { "type": "pkgConfig", "args": "libpng >= 1.6.0" }
             ]
+        },
+        "lcms2": {
+            "label": "lcms2",
+            "sources": [
+                { "type": "pkgConfig", "args": "lcms2" }
+            ]
         }
     },
 
@@ -510,6 +516,12 @@
             "condition": "config.unix && libs.libxml2 && tests.icuuc",
             "output": [ "privateFeature" ]
         },
+        "system-lcms2" : {
+            "label": "lcms2",
+            "autoDetect": "libs.lcms2",
+            "condition": "config.unix && features.printing-and-pdf",
+            "output": [ "privateFeature" ]
+        },
         "webengine-sanitizer" : {
             "label": "Sanitizer ",
             "autoDetect": "config.sanitizer && tests.sanitizer",
@@ -583,6 +595,7 @@
                         "system-jsoncpp",
                         "system-protobuf",
                         "system-libxml2",
+                        "system-lcms2",
                         "webengine-system-png",
                         "webengine-system-harfbuzz"
                     ]
