Add missing 'webengine' prefix in configure.json
Fix condition mixup in webengine-system-lcms2 configuration

Change-Id: Iff8513b1e1102c3ca6402b2ec346dfdded2c110a
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -529,8 +529,8 @@
         },
         "webengine-system-lcms2" : {
             "label": "lcms2",
-            "autoDetect": "libs.webengine-lcms2",
-            "condition": "config.unix && features.printing-and-pdf",
+            "autoDetect": "features.webengine-printing-and-pdf",
+            "condition": "config.unix && libs.webengine-lcms2",
             "output": [ "privateFeature" ]
         },
         "webengine-sanitizer" : {
