Fix configure overview of v8 snapshot
Change-Id: Iad4dd57f5a86019290bc59187e60c9c1c3db917d
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -615,7 +615,7 @@
                 "webengine-webrtc",
                 "webengine-system-ninja",
                 "webengine-geolocation",
-                "webengine-v8-snapshot-support",
+                "webengine-v8-snapshot",
                 {
                     "type": "feature",
                     "args": "webengine-alsa",
