--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -74,6 +74,8 @@ source_set("qtwebengine_sources") {
     "//chrome/common/pref_names.h",
     "//chrome/common/url_constants.cc",
     "//chrome/common/url_constants.h",
+    "//chrome/common/webui_url_constants.cc",
+    "//chrome/common/webui_url_constants.h",
     "//extensions/common/constants.cc",
     "//extensions/common/constants.h",
     "//extensions/common/url_pattern.cc",
