--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -7,8 +7,8 @@ import("//printing/features/features.gni")
 
 source_set("qtwebengine_spellcheck_sources") {
   sources = [
-    "//chrome/browser/spellchecker/spell_check_host_impl.cc",
-    "//chrome/browser/spellchecker/spell_check_host_impl.h",
+    "//chrome/browser/spellchecker/spell_check_host_chrome_impl.cc",
+    "//chrome/browser/spellchecker/spell_check_host_chrome_impl.h",
     "//chrome/browser/spellchecker/spellcheck_custom_dictionary.cc",
     "//chrome/browser/spellchecker/spellcheck_custom_dictionary.h",
     "//chrome/browser/spellchecker/spellcheck_factory.cc",
@@ -39,8 +39,9 @@ source_set("qtwebengine_sources") {
     "//third_party/skia/include/core"
   ]
   deps = [
-      "//components/nacl/common:features",
-      "//extensions/features:features",
+    "//chrome/common:features",
+    "//components/nacl/common:features",
+    "//extensions/features:features",
   ]
   sources = [
     "//chrome/common/custom_handlers/protocol_handler.cc",
