Fix webengine-v8-snapshot-support configure
It needs to be checked for all cross builds not just embedded builds,
it doesn't need to be checked for 64-bit archictures, and it is helpful
to list it in the overview even if we only act on it later.

Change-Id: I68c571480186bb9564cb564ca561dfd284f6e231
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -407,8 +407,9 @@
             "output": [ "privateFeature" ]
         },
         "webengine-v8-snapshot-support": {
+            "label" : "Building v8 snapshot supported",
             "autoDetect": "features.webengine-v8-snapshot",
-            "condition": "!config.unix || !features.webengine-embedded-build || tests.webengine-host-compiler",
+            "condition": "!config.unix || !features.cross_compile || arch.arm64 || tests.webengine-host-compiler",
             "output": [ "privateFeature" ]
         },
         "webengine-system-khr" : {
@@ -616,6 +617,11 @@
                 "webengine-system-ninja",
                 "webengine-geolocation",
                 "webengine-v8-snapshot",
+                {
+                    "type": "feature",
+                    "args": "webengine-v8-snapshot-support",
+                    "condition": "config.unix && config.cross_compile && features.webengine-v8-snapshot"
+                },
                 {
                     "type": "feature",
                     "args": "webengine-alsa",
