--- a/configure.json
+++ b/configure.json
@@ -288,9 +288,14 @@
             "label": "glibc > 2.16",
             "type": "detectGlibc"
         },
-        "webengine-icuuc": {
+        "webengine-libxml2-with-icuuc": {
             "label" : "libxml2 configured with icuuc",
-            "type": "detectIcuuc"
+            "type": "detectLibXml2WithIcuuc"
+        },
+        "webengine-libxml2-without-catalog-support": {
+            "label" : "libxml2 configured without catalog support",
+            "test" : "xml2",
+            "type": "compile"
         },
         "webengine-sanitizer": {
             "label" : "sanitizer support",
@@ -580,7 +585,10 @@
         },
         "webengine-system-libxml2": {
             "label": "libxml2 and libxslt",
-            "condition": "config.unix && libs.webengine-libxml2 && tests.webengine-icuuc",
+            "condition": "config.unix
+                         && libs.webengine-libxml2
+                         && tests.webengine-libxml2-with-icuuc
+                         && tests.webengine-libxml2-without-catalog-support",
             "output": [ "privateFeature" ]
         },
         "webengine-system-lcms2" : {
