Simplify libxml2 system compatibility detection
Test for icu also in xml2 compile test.

Change-Id: I435f609761cb299f58a9b5f68e31698bb238ab1c
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -288,12 +288,8 @@
             "label": "glibc > 2.16",
             "type": "detectGlibc"
         },
-        "webengine-libxml2-with-icuuc": {
-            "label" : "libxml2 configured with icuuc",
-            "type": "detectLibXml2WithIcuuc"
-        },
-        "webengine-libxml2-without-catalog-support": {
-            "label" : "libxml2 configured without catalog support",
+        "webengine-libxml2-compatible": {
+            "label" : "compatible system libxml2",
             "test" : "xml2",
             "type": "compile"
         },
@@ -587,8 +583,7 @@
             "label": "libxml2 and libxslt",
             "condition": "config.unix
                          && libs.webengine-libxml2
-                         && tests.webengine-libxml2-with-icuuc
-                         && tests.webengine-libxml2-without-catalog-support",
+                         && tests.webengine-libxml2-compatible",
             "output": [ "privateFeature" ]
         },
         "webengine-system-lcms2" : {
