Fix hostcompiler test for qt 'root' build
For qt root builds configure system injects qmake
flags to compile config tests. To make hostcompiler
test working correctly add missing "host" flag to
configure.json file.

Task-number: QTBUG-67983
Change-Id: Ia021ab8da8ec622f15d369357738dd8d778f2481
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -214,6 +214,7 @@
         "webengine-host-compiler": {
             "label": "host compiler",
             "test": "hostcompiler",
+            "host": "true",
             "type": "compile"
         },
         "webengine-khr": {
