Adaptations for Chromium 66
Change-Id: Iee88721a50036d4ef85a23dd1708d4fb84218708
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -39,8 +39,8 @@ source_set("qtwebengine_sources") {
     "//third_party/skia/include/core"
   ]
   deps = [
-    "//chrome/common:features",
-    "//components/nacl/common:features",
+    "//chrome/common:buildflags",
+    "//components/nacl/common:buildflags",
     "//extensions/features:features",
   ]
   sources = [
@@ -81,6 +81,8 @@ source_set("qtwebengine_sources") {
     "//extensions/common/constants.h",
     "//extensions/common/url_pattern.cc",
     "//extensions/common/url_pattern.h",
+    "//qtwebengine/browser/service_qt.cc",
+    "//qtwebengine/browser/service_qt.h",
   ]
 
   if (is_linux) {
