Adaptations for Chromium 67
Change-Id: I13cedba56012f74651a044d6fa8f0957487bf3eb
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -479,7 +479,7 @@
         },
         "webengine-pepper-plugins": {
             "label": "Pepper Plugins",
-            "purpose": "Enables use of Pepper Flash and Widevine plugins.",
+            "purpose": "Enables use of Pepper Flash plugins.",
             "section": "WebEngine",
             "autoDetect": "!features.webengine-embedded-build",
             "output": [ "privateFeature" ]
