Fix typo in configure.json
Change-Id: I7f08f89bbd875a835a55c1378833c92ce246c564
Reviewed-by: Viktor Engelmann <viktor.engelmann@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/configure.json
+++ b/configure.json
@@ -432,7 +432,7 @@
         },
         "webengine-v8-snapshot": {
             "label" : "Use v8 snapshot",
-            "purpuse": "Enables the v8 snapshot, for fast v8 context creation",
+            "purpose": "Enables the v8 snapshot, for fast v8 context creation",
             "output": [ "privateFeature" ]
         },
         "webengine-v8-snapshot-support": {
