Fix webengine geolocation feature
Use feature check in the configuration and
in the implementation files.

Make feature public, so developers can check
if webengine was complied with or without geolocation.

Change-Id: If679b5c366074c2f48fad5ba189870571567fe81
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/src/core/configure.json
+++ b/src/core/configure.json
@@ -469,7 +469,7 @@
         "webengine-geolocation": {
             "label": "Geolocation",
             "condition": "module.positioning",
-            "output": [ "privateFeature" ]
+            "output": [ "publicFeature" ]
         },
         "webengine-pulseaudio": {
             "label": "Use PulseAudio",
