Migrate WebChannel IPC to mojo
Mojoifies:
 * WebChannelIPCTransport_SetWorldId
 * WebChannelIPCTransport_Message
 * WebChannelIPCTransportHost_SendMessage

This change is just the simple rewrite of IPC in web
channel transport, however ultimate goal here is
to use mojo directly in javascript land.

Change-Id: Ifcf84659b1d48d99cc4e87849b8a258303e8fedc
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

--- a/src/core/qtwebengine.gni
+++ b/src/core/qtwebengine.gni
@@ -32,6 +32,7 @@ deps = [
   "//third_party/blink/public:blink",
   "//third_party/mesa:mesa_headers",
   "//ui/accessibility",
+  "//qtwebengine/browser:interfaces",
   ":qtwebengine_sources",
   ":qtwebengine_resources"
 ]
